# verbier-whatsapp-bot

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  bot.js  docker-compose.nas.yml  docker-compose.unraid.yml  docker-compose.yml  eslint.config.js  main.py  package-lock.json  package.json  pyproject.toml  renovate.json  server.py  vitest.config.js
.github/workflows/: ci.yml  docker.yml  docs.yml  security.yml
docs/: README.md  _sidebar.md  commands.md  index.html  quickstart.md
docs/architecture/: data-sources.md  overview.md  structure.md
docs/deployment/: auto-updates.md  docker.md  nas.md  portainer.md
docs/development/: cicd.md  contributing.md  setup.md  testing.md
docs/plans/: 2025-11-26-teleport-client-design.md
examples/: whatsapp_bot_example.py
src/: commands.js  config.js  logger.js  teleport.js  utils.js  weather.js
src/teleport_client/: __init__.py  client.py  exceptions.py  models.py
tests/: test_client.py  utils.test.js  weather.test.js
whatsapp-bot/: .env.example  bot.js  package.json
