[project]
name = "teleport-client"
version = "0.1.0"
description = "Async Python client for teleport.io feeds"
readme = "README.md"
authors = [
    { name = "Elie BRUNO", email = "contact@eliebruno.com" }
]
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "respx>=0.21",
]

[build-system]
requires = ["uv_build>=0.9.11,<0.10.0"]
build-backend = "uv_build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
